# biginteger

./: .gitignore  CMakeLists.txt  Doxyfile  install-dependencies.cmd  install-dependencies.sh
include/: big_integer.h
src/: CMakeLists.txt  big_integer.cpp
test/: CMakeLists.txt  absolute_test.cpp  add_test.cpp  bool_operator_test.cpp  decrement.cpp  decrement_test.cpp  divide_test.cpp  increment.cpp  increment_test.cpp  is_negative_test.cpp  is_positive_test.cpp  mod_test.cpp  multiply_test.cpp  negate_test.cpp  positive_negativ_test.cpp  pow.cpp  sqrt_test.cpp  subtract_test.cpp  swap.cpp  swap_test.cpp  to_floating_test.cpp  to_integer_test.cpp
test/alef/numerics/big_integer/arithmetic/: add_long_number_test.cpp  add_test.cpp  divide_long_number_test.cpp  divide_test.cpp  mod_test.cpp  multiply_long_number_test.cpp  multiply_test.cpp  subtract_long_number_test.cpp  subtract_test.cpp
test/alef/numerics/big_integer/checking/: is_negative_test.cpp  is_positive_test.cpp  is_pow10_test.cpp
test/alef/numerics/big_integer/comparison/: equivalent_test.cpp  greater_test.cpp  less_test.cpp  not_equivalent_test.cpp
test/alef/numerics/big_integer/constructing/: copy_assignment_operator_test.cpp  copy_constructor_test.cpp  from_char_pointer_assignment_operator_test.cpp  from_char_pointer_constructor_test.cpp  from_integral_assignment_operator_test.cpp  from_integral_constructor_test.cpp  from_string_assignment_operator_test.cpp  from_string_constructor_test.cpp  move_assignment_operator_test.cpp  move_constructor_test.cpp
test/alef/numerics/big_integer/converting/: operator_bool_test.cpp  to_integer_int64_test.cpp  to_integer_int_test.cpp
test/alef/numerics/big_integer/math/: abs_test.cpp  gcd_test.cpp  lcm_test.cpp  pow10_test.cpp  pow_test.cpp  sqrt_test.cpp
test/alef/numerics/big_integer/modification/: decrement_test.cpp  increment_test.cpp  negate_test.cpp  shift_left_test.cpp  shift_right_test.cpp  swap_test.cpp
test/alef/numerics/biginteger/arithmetic/: add_long_number_test.cpp  add_test.cpp  divide_long_number_test.cpp  divide_test.cpp  mod_test.cpp  multiply_long_number_test.cpp  multiply_test.cpp  subtract_long_number_test.cpp  subtract_test.cpp
test/alef/numerics/biginteger/checking/: is_negative_test.cpp  is_positive_test.cpp  is_pow10_test.cpp
test/alef/numerics/biginteger/comparison/: equivalent_test.cpp  greater_test.cpp  less_test.cpp  not_equivalent_test.cpp
test/arithmetic/: add_long_number_test.cpp  add_test.cpp  divide_long_number_test.cpp  divide_test.cpp  mod_test.cpp  multiply_long_number_test.cpp  multiply_test.cpp  subtract_long_number_test.cpp  subtract_test.cpp
test/biginteger/arithmetic/: add_long_number_test.cpp  add_test.cpp  divide_long_number_test.cpp  divide_test.cpp  mod_test.cpp  multiply_long_number_test.cpp  multiply_test.cpp  subtract_long_number_test.cpp  subtract_test.cpp
test/biginteger/checking/: is_negative_test.cpp  is_positive_test.cpp  is_pow10_test.cpp
test/biginteger/comparison/: equivalent_test.cpp  greater_test.cpp  less_test.cpp  not_equivalent_test.cpp
test/biginteger/constructing/: copy_assignment_operator_test.cpp  copy_constructor_test.cpp  from_char_pointer_assignment_operator_test.cpp  from_char_pointer_constructor_test.cpp  from_integral_assignment_operator_test.cpp  from_integral_constructor_test.cpp  from_string_assignment_operator_test.cpp  from_string_constructor_test.cpp  move_assignment_operator_test.cpp  move_constructor_test.cpp
test/biginteger/converting/: operator_bool_test.cpp  to_integer_int64_test.cpp  to_integer_int_test.cpp
test/biginteger/math/: abs_test.cpp  gcd_test.cpp  lcm_test.cpp  pow10_test.cpp  pow_test.cpp  sqrt_test.cpp
test/biginteger/modification/: decrement_test.cpp  increment_test.cpp  negate_test.cpp  shift_left_test.cpp  shift_right_test.cpp  swap_test.cpp
test/checking/: is_negative_test.cpp  is_positive_test.cpp  is_pow10.cpp
test/comparison/: equivalent_test.cpp  greater.cpp  less_test.cpp  not_equivalent_test.cpp
test/constructing/: copy_assignment_operator_test.cpp  copy_constructor_test.cpp  from_char_pointer_assignment_operator.cpp  from_char_pointer_constructor.cpp  from_integral_assignment_operator.cpp  from_integral_constructor.cpp  from_string_assignment_operator.cpp  from_string_constructor.cpp  move_assignment_operator_test.cpp  move_constructor_test.cpp
test/construction/: copy_assignment_operator_test.cpp  copy_constructor_test.cpp  from_char_pointer_assignment_operator.cpp  from_char_pointer_constructor.cpp  from_integral_assignment_operator.cpp  from_integral_constructor.cpp  from_string_assignment_operator.cpp  from_string_constructor.cpp  move_assignment_operator_test.cpp  move_constructor_test.cpp
test/conversion/: bool_operator_test.cpp  operator_bool_test.cpp  to_floating_test.cpp  to_integer_int64_test.cpp  to_integer_int_test.cpp  to_integer_test.cpp
test/converting/: operator_bool_test.cpp  to_integer_int64_test.cpp  to_integer_int_test.cpp
test/math/: abs_test.cpp  add_test.cpp  divide_test.cpp  gcd_test.cpp  lcm_test.cpp  mod_test.cpp  multiply_test.cpp  negate_test.cpp  pow10_test.cpp  pow_test.cpp  sqrt.cpp  sqrt_test.cpp  subtract_test.cpp
test/modification/: decrement_test.cpp  increment_test.cpp  negate_test.cpp  operator_right_shift.cpp  operator_shift_test.cpp  shift_left_test.cpp  shift_right_test.cpp  shift_test.cpp  swap_test.cpp  tilde_operator_test.cpp
(+126 files in other folders)
